# deep-sight

./: .gitignore  CITATION.cff  CMakeLists.txt  DeepSight.sln  LICENSE  README.md  build.bat  build_deepsight.bat  copy_depends.bat  version.props
DeepSightCommon/: AssemblyInfo.cpp  InfoLogClr.h  KnotClr.cpp  KnotClr.h
deep-sight-deprecated/: install_depends.bat
deep-sight-deprecated/exhibit/demo/: index.html
deep-sight-deprecated/src/py_deepsight/: pyDeepSight.cpp  pyDeepSightGrid.cpp  pyGrid.h
deep-sight-deprecated/test/: 20200920_fungar_cut_volume.py  20200923_fungar_network.py  convert_many_tiffs_to_vdb.py  convert_to_vdb.py  test_grid_02.py  test_grid_03.py  test_grid_04.py  test_grid_05.py
dep/glad/src/: glad.c
dep/openexr-2.4.0/lib/: Half-2_4.lib  Half-2_4_static.lib  Iex-2_4.lib  Iex-2_4_static.lib  IexMath-2_4.lib  IexMath-2_4_static.lib  IlmImf-2_4.lib  IlmImfUtil-2_4.lib  IlmImfUtil-2_4_static.lib  IlmThread-2_4.lib  IlmThread-2_4_static.lib  Imath-2_4.lib
dep/openvdb/cmd/: openvdb_render.cc
dep/openvdb/lib/: openvdb.lib
dep/tiff-4.1.0/lib/: tiff.exp  tiff.lib
python/: MANIFEST.in  build.bat  pyproject.toml  setup.cfg
python/deepsight/: __init__.py
src/DeepSight.GH/: Api.cs  DeepSight.GH.csproj  GridGoo.cs  GridSample.cs  GridSet.cs  VGridDisplace.cs  VGridSample.cs  VGridSet.cs
src/DeepSight.GH/CreateConvert/: DeLog.cs  GetPointCloud.cs  GridFromCurve.cs  GridFromMesh.cs  GridFromPointCloud.cs  GridMesh.cs  GridNew.cs  PointCloudNew.cs  VGridNew.cs
src/DeepSight.GH/Display/: GridActive.cs  GridDisplay.cs  GridInspect.cs  GridSlice.cs  VGridDisplay.cs
src/DeepSight.GH/IO/: GridLoad.cs  GridSave.cs  MetaLogLoad.cs
src/DeepSight.GH/Misc/: GetPointCloud.cs  PointCloudNew.cs
src/DeepSight.GH/Properties/: AssemblyInfo.cs
src/DeepSight.GH/Tools/: GridCombine.cs  GridConvert.cs  GridDilate.cs  GridFilter.cs  GridMask.cs  GridMorphology.cs  GridPrep.cs  GridResample.cs  GridSample.cs  GridSet.cs  GridThreshold.cs  ScalarMath.cs  VGridDilate.cs  VGridFilter.cs  VGridMorphology.cs
src/DeepSight.GH/Utility/: AppendLog.cs  BrepBasePlane.cs  ExpandEnvVars.cs  FlipBasePlane.cs  ReadLog.cs
src/DeepSight.GH/VGrid/: ColorFromPtCloud.cs  ConstructVGrid.cs  DeconstructVGrid.cs  GridMath.cs  VGridWarp.cs  WarpSrf.cs
src/DeepSight.GH/Weathering/: GridErode.cs  GridExposure.cs  GridMaterial.cs  GridToolpath.cs
src/DeepSightCommon/: AdditiveRender.cpp  AdditiveRender.h  DeepSightCommon.cpp  DeepSightCommon.h  DeepSightCommon.vcxproj  DeepSightCommon.vcxproj.filters  InfoLogClr.cpp  InfoLogClr.h  KnotClr.h
src/DeepSightNet/: Api.cs  Combine.cs  Convert.cs  CtLog.cs  DeepSightNet.csproj  DeepSightNetDiagram.cd  DoubleGrid.cs  Filter.cs  FloatGrid.cs  Grid.cs  GridBase.cs  GridIO.cs  InfoLog.cs  Int32Grid.cs  LayeredGrid.cs  Mesh.cs  QuadMesh.cs  RLGeom.cs  Types.cs  Vec3Grid.cs  Vec3fGrid.cs  Weathering.cs
src/DeepSightNet/GridTypes/: DoubleGrid.cs  FloatGrid.cs  GridBase.cs  Int32Grid.cs  Vec3fGrid.cs
src/DeepSightNet/Mesh/: Mesh.cs  QuadMesh.cs
src/DeepSightNet/Properties/: AssemblyInfo.cs
src/DeepSightRhino/: DeepSightRhino.csproj  ErosionSolver.cs  Extensions.cs  Functions.cs  LamellaPerformance.cs  LamellaPlacement.cs
src/DeepSightRhino/Properties/: AssemblyInfo.cs
src/PrePoMax.GH/: Cmpt_FeModel.cs  Cmpt_FeResults.cs  Cmpt_FeResultsMesh.cs  Cmpt_FeResultsQuery.cs  Cmpt_FeResultsValues.cs  Extensions.cs  FeModelGoo.cs  FeResultsGoo.cs  PrePoMax.GH.csproj  Utility.cs  packages.config
src/PrePoMax.GH/Properties/: AssemblyInfo.cs  Resources.Designer.cs
src/RawLamb/: Board.cs  ErosionSolver.cs  Extensions.cs  Geometry.cs  Graph.cs  Knot.cs  KnotFibreOrientationModel.cs  LamellaAllocator.cs  Log.cs  LogModel.cs  LogYard.cs  RawLamb.csproj  RawLambDiagram.cd  packages.config
src/RawLamb.GH/: DeepSight.GH.csproj  Graph Goo.cs  GraphCommand.cs  GraphCreate.cs  GridActive.cs  GridCombine.cs  GridConvert.cs  GridDisplay.cs  GridFilter.cs  GridFromCurve.cs  GridFromMesh.cs  GridGoo.cs  GridInspect.cs  GridLoad.cs  GridMesh.cs  GridNew.cs  GridResample.cs  GridSample.cs  GridSave.cs  GridSet.cs  LogGoo.cs  RawLamb.GH.csproj  packages.config
src/RawLamb.GH/CreateConvert/: DeLog.cs  GridFromMesh.cs  GridMesh.cs  GridNew.cs  VGridNew.cs
src/RawLamb.GH/Display/: GridInspect.cs
src/build_all/: build_all.cpp  build_all.vcxproj  build_all.vcxproj.filters
src/deepsight/: CombineAPI.cpp  CombineAPI.h  Composite_ext.cpp  Composite_ext.h  ConvertAPI.cpp  ConvertAPI.h  CtLog.cpp  CtLog.h  Grid-export-common.cpp  Grid-export-common.h  Grid-export.cpp  Grid-export.h  Grid.cpp  Grid.h  GridBase.cpp  GridBase.h  GridBaseAPI.cpp  GridBaseAPI.h  InfoLog-export.cpp  InfoLog-export.h  InfoLog.cpp  InfoLog.h  Mesh.cpp  Mesh.h  ParticleList.cpp  ParticleList.h  ReadWrite.cpp  ReadWrite.h  Tools.cpp  Tools.h  ToolsAPI.cpp  ToolsAPI.h  config.h  deepsight.vcxproj  deepsight.vcxproj.filters  deepsightApiDiagram.cd  dllmain.cpp  io.cpp  io.h  util.h
src/dsTest/: CMakeLists.txt  main.cpp
src/icons/: deep-sight-icons.blend  deep-sight-icons.blend1
src/openvdb_sandbox/: openvdb_sandbox.cpp  openvdb_sandbox.filters  openvdb_sandbox.vcxproj
src/pyDeepSight/: pyDeepSight.cpp  pyDeepSight.vcxproj  pyDeepSight.vcxproj.filters  pyGrid-impl.cpp  pyGrid.cpp  pyGrid.h  pyInfoLog.cpp  pyInfoLog.h  pyutil.h
src/py_deepsight/: CMakeLists.txt  pyGrid-impl.cpp  pyGrid.cpp  py_DeepSight.cpp  py_Grid.cpp  py_Window.cpp  pyutil.h
src/testDeepSightNet/: Program.cs  testDeepSightNet.csproj
test/: 20200905_DataViz_working.py  20200908_DataViz_Raw_Lam_working.py  20200908_RawLam_examples_slider.py  20200920_fungar_cut_volume.py  20200923_fungar_network.py  20201009_voxel_regions.py  20201019_density.py  20201021_images_to_curves.py  20201026_images_to_curves.gh  convert_many_tiffs_to_vdb.py  convert_to_vdb.py  regex_test.py  test_grid_01.py  test_grid_02.py  test_grid_04.py  test_grid_05.py  test_grid_filter_and_save_01.py  test_grid_gradient_01.py  test_grid_gradient_02.py  test_pydeepsight_00.py  test_pydeepsight_01.py  test_pydeepsight_02.py
(+67 files in other folders)
