[metadata]
name = deepsight
version = attr: deepsight.VERSION
author = Tom Svilans
author_email = tsvi@kglakademi.dk
url = https://github.com/cita-cph/deep-sight
description = Deep Sight toolkit for volumetric modelling.
long_description = file: README.md, LICENSE.md
license = MIT License
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
install_requires = 
    numpy>=1.20

include_package_data = True

[options.package_data]
* = 
	*.dll
	*.pyd
	*.py

[options.exclude_package_data]
* =
    *.pdb
    *.lib
    *.exp
