cmake_minimum_required (VERSION 3.10)

set(PROJECT_NAME dsTest)
project(${PROJECT_NAME} LANGUAGES CXX C)

cmake_policy(SET CMP0081 NEW)
cmake_policy(SET CMP0015 NEW)
cmake_policy(SET CMP0019 NEW)

link_directories(${DEEPSIGHT_LINK_DIR}
	)

add_executable(${PROJECT_NAME}
	${DEEPSIGHT_SOURCE_FILES}
	main.cpp
)

target_sources(${PROJECT_NAME}
	PUBLIC
	${DEEPSIGHT_SOURCE_FILES}
	)

target_include_directories(${PROJECT_NAME}
	PUBLIC ${DEEPSIGHT_INCLUDE_DIR}
	)

target_link_libraries(${PROJECT_NAME} PRIVATE ${DEEPSIGHT_LIBS})

set_target_properties(${PROJECT_NAME} PROPERTIES
  LIBRARY_OUTPUT_DIRECTORY_DEBUG   ${DEEPSIGHT_OUTPUT_DIR}
  LIBRARY_OUTPUT_DIRECTORY_RELEASE ${DEEPSIGHT_OUTPUT_DIR}
  ARCHIVE_OUTPUT_DIRECTORY_DEBUG   ${DEEPSIGHT_OUTPUT_DIR}
  ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${DEEPSIGHT_OUTPUT_DIR}
  RUNTIME_OUTPUT_DIRECTORY_DEBUG   ${DEEPSIGHT_OUTPUT_DIR}
  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${DEEPSIGHT_OUTPUT_DIR}
)

install(TARGETS ${PROJECT_NAME} DESTINATION ${DEEPSIGHT_OUTPUT_DIR})



